# microstrain_mips

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  bias_values_client.cpp  mainpage.dox  package.xml  wiki_src.txt
.devcontainer/: Dockerfile.deploy  Dockerfile.dev  Dockerfile.driver  Makefile  devcontainer.json  docker-entrypoint.sh
.devcontainer/.vscode-docker/: c_cpp_properties.json  launch.json  settings.json
.github/: labeler.yml
Examples/: README.md
Examples/ros_mscl_cpp_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
Examples/ros_mscl_cpp_example/launch/: listener.launch
Examples/ros_mscl_cpp_example/src/: listener.cpp
config/: custom_rosconsole.conf  diagnostic_analyzers.yaml
docker/: .gitignore  Dockerfile  Makefile
include/: microstrain_3dm_gx5_45.h  my_user_functions.h
launch/: microstrain.launch  microstrain_10.launch  microstrain_25.launch  microstrain_kf.launch  microstrain_old.launch  microstrain_pioneer.launch
microstrain_examples/: CMakeLists.txt  README.md  package.xml
microstrain_inertial/: CMakeLists.txt  package.xml
microstrain_inertial_driver/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
microstrain_inertial_driver/config/: custom_rosconsole.conf
microstrain_inertial_driver/debian/: udev
microstrain_inertial_driver/include/microstrain_inertial_driver/: microstrain_diagnostic_updater.h  microstrain_inertial_driver.h
microstrain_inertial_driver/launch/: microstrain.launch
microstrain_inertial_driver/src/: microstrain_diagnostic_updater.cpp  microstrain_inertial_driver.cpp  microstrain_inertial_driver_node.cpp
microstrain_inertial_examples/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
microstrain_inertial_examples/launch/: listener_cpp.launch  listener_py.launch
microstrain_inertial_examples/src/: listener.cpp
microstrain_inertial_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
microstrain_inertial_quickview/: CMakeLists.txt  package.xml  setup.py
microstrain_inertial_quickview/launch/: quickview.launch
microstrain_inertial_rqt/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml  setup.py
microstrain_inertial_rqt/launch/: quickview.launch
microstrain_msgs/: CMakeLists.txt  package.xml
mscl_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mscl_msgs/msg/: GNSSAidingStatus.msg  GNSSDualAntennaStatus.msg  GPSCorrelationTimestamp.msg  GPSCorrelationTimestampStamped.msg  RTKStatus.msg
msg/: status_msg.msg
ros_mscl/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_mscl/include/ros_mscl/: microstrain_3dm.h  microstrain_diagnostic_updater.h
ros_mscl/launch/: microstrain.launch
ros_mscl/msg/: GpsCorrelationTimestampStamped.msg  filter_heading_state_msg.msg  filter_status_msg.msg  nav_heading_msg.msg
ros_mscl/src/: cmded_ang_rate_zupt_client.cpp  cmded_vel_zupt_client.cpp  commanded_ang_rate_zupt_client.cpp  commanded_vel_zupt_client.cpp  device_report_client.cpp  device_settings_client.cpp  get_accel_adaptive_vals_client.cpp  get_accel_bias_model_client.cpp  get_accel_noise_client.cpp  get_gravity_adaptive_vals_client.cpp  get_gyro_bias_client.cpp  get_gyro_noise_client.cpp  get_mag_dip_adaptive_vals_client.cpp  get_reference_position_client.cpp  get_sensor2vehicle_offset_client.cpp  get_sensor2vehicle_rotation_client.cpp  get_sensor_vehicle_frame_offset_client.cpp  get_zero_velocity_update_threshold_client.cpp  gyro_bias_capture_client.cpp  init_filter_euler_client.cpp  init_filter_heading_client.cpp  microstrain_3dm.cpp  microstrain_3dm_node.cpp  microstrain_diagnostic_updater.cpp  set_dynamics_mode_client.cpp  set_estimation_control_flags_client.cpp  set_gravity_adaptive_vals_client.cpp  set_gyro_bias_client.cpp  set_gyro_noise_client.cpp  set_hard_iron_values_client.cpp  set_heading_source_client.cpp  set_mag_adaptive_vals_client.cpp  set_sensor2vehicle_offset_client.cpp  set_sensor2vehicle_rotation_client.cpp  set_sensor_to_vehicle_rotation_client.cpp  set_sensor_to_vehicle_translation_client.cpp  set_sensor_vehicle_frame_trans_client.cpp  set_zero_velocity_update_threshold_client.cpp
ros_mscl/srv/: DeviceSettings.srv  ExternalHeadingUpdate.srv  GetAccelAdaptiveVals.srv  GetComplementaryFilter.srv  GetConingScullingComp.srv  GetDynamicsMode.srv  GetEstimationControlFlags.srv  GetGyroBiasModel.srv  GetGyroNoise.srv  GetHardIronValues.srv  GetHeadingSource.srv  GetMagDipAdaptiveVals.srv  GetReferencePosition.srv  GetRelativePositionReference.srv  GetSensor2VehicleOffset.srv  GetSensor2VehicleRotation.srv  GetSensor2VehicleTransformation.srv  GetSensorToVehicleTransform.srv  GetSoftIronMatrix.srv  GetTareOrientation.srv  GetZeroVelocityUpdateThreshold.srv  SetEstimationControlFlags.srv  SetHeadingSource.srv  SetRelativePositionReference.srv
src/: GX4-45_Test.c  GX4-45_Test.cpp  device_report_client.cpp  get_accel_adaptive_vals_client.cpp  get_accel_bias_client.cpp  get_accel_bias_model_client.cpp  get_accel_noise_client.cpp  get_basic_status.cpp  get_basic_status_client.cpp  get_complementary_filter_client.cpp  get_coning_sculling_comp_client.cpp  get_diagnostic_report_client.cpp  get_dynamics_mode_client.cpp  get_estimation_control_flags_client.cpp  get_gyro_bias_client.cpp  get_gyro_bias_model_client.cpp  get_gyro_noise_client.cpp  get_hard_iron_values_client.cpp  get_mag_adaptive_vals_client.cpp  get_mag_dip_adaptive_vals_client.cpp  get_mag_noise_client.cpp  get_reference_position_client.cpp  get_sensor_vehicle_frame_offset_client.cpp  get_sensor_vehicle_frame_trans_client.cpp  get_soft_iron_matrix_client.cpp  get_zero_angle_update_threshold_client.cpp  gyro_bias_capture_client.cpp  init_filter_euler_client.cpp  microstrain_3dm.cpp  microstrain_3dm_gx5.cpp  microstrain_3dm_gx5_45.cpp  microstrain_3dm_gx5_45_node.cpp  microstrain_3dm_gx5_node.cpp  microstrain_3dm_node.cpp  microstrain_diagnostic_updater.cpp  mip_sdk_user_functions.c  my_user_functions.c  set_accel_adaptive_vals.cpp  set_accel_adaptive_vals_client.cpp  set_accel_bias_client.cpp  (+22 more)
srv/: SetBias.srv  SetDynamicsMode.srv  SetEstimationControlFlags.srv  bias_values.srv
(+54 files in other folders)
