<?xml version="1.0"?>
<package format="2">
  <name>microstrain_3dm_gx5_45</name>
  <version>0.0.1</version>
  <description>The microstrain_3dm_gx5_45 package provides a driver for the LORD/Microstrain 3DM_GXx_45 GPS-aided IMU sensor.</description>
  <author email="briansbingham@gmail.com">Brian Bingham</author> -->
  <maintainer email="briansbingham@gmail.com">Brian Bingham</maintainer>
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/microstrain_3dm_gx5_45</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

</package>