<?xml version="1.0"?>
<package format="2">
  <name>microstrain_inertial_driver</name>
  <version>2.4.1</version>
  <description>The ros_mscl package provides a driver for the LORD/Microstrain inertial products.</description>
  <author>Brian Bingham</author>
  <author>Parker Hannifin Corp</author>
  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>diagnostic_updater</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <depend>microstrain_inertial_msgs</depend>

  <!-- Dependencies needed to install MSCL from the CMake file  -->
  <build_depend>jq</build_depend>
  <build_depend>curl</build_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
