<?xml version="1.0"?>
<package>
  <name>microstrain_inertial_msgs</name>
  <version>2.4.1</version>
  <description>A package that contains ROS message corresponding to microstrain message types.</description>

  <author>Dr. Kristopher Krasnosky</author>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
