<?xml version="1.0"?>
<package format="2">
  <name>microstrain_inertial_quickview</name>
  <version>2.0.4</version>
  <description>The microstrain_inertial_quickview package provides a quick view of microstrin inertial devices</description>

  <author>Parker Hannifin Corp</author>

  <maintainer email="rob.fisher@parker.com">Rob Fisher</maintainer>
  <maintainer email="melissa.gill@parker.com">Melissa Gill</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/LORD-MicroStrain/microstrain_inertial</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>microstrain_inertial_msgs</depend>

  <!-- all the existing tags -->
  <export>
    <rqt_gui plugin="${prefix}/microstrain_inertial_quickview_common/plugin.xml"/>
  </export>

</package>
